--- a/Task 6/Task 6.2/style.css
+++ b/Task 6/Task 6.2/style.css
@@ -4,19 +4,19 @@ body {
     color: white;
 }
 
-.mainForm {
+form.main-form {
     width: 600px;
     border: 4px solid #0075b2;
     background-color: #0690cf;
 }
 
-.formHeader {
+h1 {
     font-size: 30px;
     margin: 4% 0% 2.5% 4%;
 }
 
-.registrationUnderline {
-    background-color: white;
+form.main-form hr {
+    color: white;
 }
 
 .e-mail {
@@ -24,46 +24,33 @@ body {
     width: 500px;
 }
 
-.e-mail input {
+.form-input {
     width: 100%;
     border: 1.5px solid #abadb3;
+    box-sizing: border-box;
 }
 
-.passwordContainter {
+.password-containter {
     margin: 0% 0% 7% 4%;
     width: 500px;
     display: flex;
     flex-direction: row;
-    justify-content:flex-start;
+    justify-content: flex-start;
 }
 
-.password {
-    width: 230px;
+.password-containter-block {
+    width: 240px;
 }
 
-.password input {
-    width: 100%;
-    border: 1.5px solid #abadb3;
+.password-containter-block:last-child {
+    margin-left: 20px;
 }
 
-.passwordOnceAgain {
-    width: 50%;
-}
-
-.passwordOnceAgain input {
-    margin-left: 40px;
-    width: 230px;
-    border: 1.5px solid #abadb3;
-}
-
-.passwordOnceAgain label {
-    margin-left: 40px;
-}
-
-.submitBtn {
+.main-form input[type="submit"] {
     width: 130px;
     height: 35px;
     margin: 0% 0% 5% 4%;
     font-size: 18px;
     background-color: #ffdf7f;
+    border: none;
 }
